{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 350,
  "lineage": "67912c20-125a-4d9b-04ab-ff68678cc0bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "thistgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:transit-gateway/tgw-0de4e635dd9aa98d9",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "seoul Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0de4e635dd9aa98d9",
            "multicast_support": "disable",
            "owner_id": "518897854809",
            "tags": {
              "Name": "seoul-tgw"
            },
            "tags_all": {
              "Name": "seoul-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:transit-gateway-route-table/tgw-rtb-005cef4cd02a7d9f6",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-005cef4cd02a7d9f6",
            "tags": {
              "Name": "seoul-tgw-rt"
            },
            "tags_all": {
              "Name": "seoul-tgw-rt"
            },
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-005cef4cd02a7d9f6_tgw-attach-0afe44d2d127e4b47",
            "resource_id": "vpc-07fe8f59c530405ca",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0afe44d2d127e4b47",
            "transit_gateway_route_table_id": "tgw-rtb-005cef4cd02a7d9f6"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "aws_ec2_transit_gateway_route_table.thistgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.region_vpc_tgw_attach",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-005cef4cd02a7d9f6_tgw-attach-0afe44d2d127e4b47",
            "resource_id": "vpc-07fe8f59c530405ca",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0afe44d2d127e4b47",
            "transit_gateway_route_table_id": "tgw-rtb-005cef4cd02a7d9f6"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "aws_ec2_transit_gateway_route_table.thistgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.region_vpc_tgw_attach",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0afe44d2d127e4b47",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0515d2539f000d5a4",
              "subnet-06e0ab844cc0ff310"
            ],
            "tags": {
              "Name": "seoul-vpc-tgw-attach"
            },
            "tags_all": {
              "Name": "seoul-vpc-tgw-attach"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9",
            "vpc_id": "vpc-07fe8f59c530405ca",
            "vpc_owner_id": "518897854809"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_a_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056ca95fbe4412ed51896866592",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056ca95fbe4412ed5",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_c_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0be832458f4f094031896866592",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be832458f4f09403",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_a_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0346efd45b8817da91896866592",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0346efd45b8817da9",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_c_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e8be2db5635a30f1896866592",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e8be2db5635a30f",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0de4e635dd9aa98d9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "gwlb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0346efd45b8817da91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0346efd45b8817da9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-02f15f74e8ca64d42",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "gwlb_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e8be2db5635a30f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e8be2db5635a30f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-09d9be85304c71a52",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a5808b3818dd1301611011835",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a5808b3818dd130",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-02f15f74e8ca64d42",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.22.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a5808b3818dd1301650011441",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a5808b3818dd130",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-09d9be85304c71a52",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-09a5808b3818dd130",
            "id": "rtb-09a5808b3818dd130",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-igw-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-igw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0ce2628c19568213b",
            "id": "rtbassoc-0f2513a8238fbc36e",
            "route_table_id": "rtb-09a5808b3818dd130"
          },
          "dependencies": [
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.admin_access_ingress_icmp",
            "module.vpc.aws_vpc_security_group_ingress_rule.alb_access_ingress_icmp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9780c0c19e261a6",
            "domain": "vpc",
            "id": "eipalloc-0d9780c0c19e261a6",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-110-60.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.110.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b297e2865e69424",
            "domain": "vpc",
            "id": "eipalloc-00b297e2865e69424",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-112-95.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.112.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:internet-gateway/igw-0ce2628c19568213b",
            "id": "igw-0ce2628c19568213b",
            "owner_id": "518897854809",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-igw"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9780c0c19e261a6",
            "association_id": "eipassoc-057e5d7a1cb7bc5d6",
            "connectivity_type": "public",
            "id": "nat-0e1ad614b9fb8a63c",
            "network_interface_id": "eni-05a30671da245bd45",
            "private_ip": "20.4.2.194",
            "public_ip": "13.124.110.60",
            "subnet_id": "subnet-0515d2539f000d5a4",
            "tags": {
              "Name": "Region02-nat-gw-2a"
            },
            "tags_all": {
              "Name": "Region02-nat-gw-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b297e2865e69424",
            "association_id": "eipassoc-083f0da3c4c5d11c9",
            "connectivity_type": "public",
            "id": "nat-012cc2d8ddf145220",
            "network_interface_id": "eni-0d133c4a3af4e38fe",
            "private_ip": "20.4.22.134",
            "public_ip": "15.164.112.95",
            "subnet_id": "subnet-06e0ab844cc0ff310",
            "tags": {
              "Name": "Region02-nat-gw-2c"
            },
            "tags_all": {
              "Name": "Region02-nat-gw-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ce2628c19568213b",
            "id": "r-rtb-0a5044ac9eb6a537a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5044ac9eb6a537a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056ca95fbe4412ed51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e1ad614b9fb8a63c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056ca95fbe4412ed5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0be832458f4f094031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012cc2d8ddf145220",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be832458f4f09403",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-056ca95fbe4412ed5",
            "id": "rtb-056ca95fbe4412ed5",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-private-a-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-private-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-0be832458f4f09403",
            "id": "rtb-0be832458f4f09403",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-private-c-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-private-c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-0346efd45b8817da9",
            "id": "rtb-0346efd45b8817da9",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-a-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-00e8be2db5635a30f",
            "id": "rtb-00e8be2db5635a30f",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-c-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:route-table/rtb-0a5044ac9eb6a537a",
            "id": "rtb-0a5044ac9eb6a537a",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011fd362e5d0a18e3",
            "route_table_id": "rtb-056ca95fbe4412ed5",
            "subnet_id": "subnet-0b629cd2a39fc427e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054988fbd41fb3123",
            "route_table_id": "rtb-0be832458f4f09403",
            "subnet_id": "subnet-0d8781eb2892e4bf4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d2f0bf3a7279c2",
            "route_table_id": "rtb-0346efd45b8817da9",
            "subnet_id": "subnet-0515d2539f000d5a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83d347fe05c07b5",
            "route_table_id": "rtb-00e8be2db5635a30f",
            "subnet_id": "subnet-06e0ab844cc0ff310"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bfac15d1a2bcf28",
            "route_table_id": "rtb-0a5044ac9eb6a537a",
            "subnet_id": "subnet-0454539791cd4cb2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046067b2c892c51b5",
            "route_table_id": "rtb-0a5044ac9eb6a537a",
            "subnet_id": "subnet-03d8a38881247e08a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:security-group/sg-0b02e0c32a1711212",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b02e0c32a1711212",
            "ingress": [],
            "name": "Region02-admin-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-admin-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:security-group/sg-0c4a1ef6b4b6642e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4a1ef6b4b6642e4",
            "ingress": [],
            "name": "Region02-alb-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-alb-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:security-group/sg-0af3fe27df3be5e53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af3fe27df3be5e53",
            "ingress": [],
            "name": "Region02-web-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-web-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "20.4.0.0/16",
              "218.50.140.95/32",
              "3.36.61.182/32"
            ],
            "description": "Allow SSH for admin",
            "from_port": 22,
            "id": "sgrule-435277138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b02e0c32a1711212",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from ALB Security Group",
            "from_port": 80,
            "id": "sgrule-1539139171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0af3fe27df3be5e53",
            "security_group_rule_id": "sgr-0781c5c58ea69f349",
            "self": false,
            "source_security_group_id": "sg-0c4a1ef6b4b6642e4",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_access_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from ALB Security Group",
            "from_port": 443,
            "id": "sgrule-60937157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0af3fe27df3be5e53",
            "security_group_rule_id": "sgr-0ed977e7f8d6aa0fc",
            "self": false,
            "source_security_group_id": "sg-0c4a1ef6b4b6642e4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgrule-1134154848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c4a1ef6b4b6642e4",
            "security_group_rule_id": "sgr-04d6fc0e56e9f6bfc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-1113611265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c4a1ef6b4b6642e4",
            "security_group_rule_id": "sgr-06a5a1c227366dcfb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-0b629cd2a39fc427e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.4.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b629cd2a39fc427e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-private-subnet-2a-20.4.3.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-private-subnet-2a-20.4.3.0/24"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-0d8781eb2892e4bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "20.4.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8781eb2892e4bf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-private-subnet-2c-20.4.33.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-private-subnet-2c-20.4.33.0/24"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-0515d2539f000d5a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.4.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515d2539f000d5a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-subnet-2a-20.4.2.0/24",
              "kubernetes.io/cluster/eks-cluster-Region02-an2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-subnet-2a-20.4.2.0/24",
              "kubernetes.io/cluster/eks-cluster-Region02-an2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-06e0ab844cc0ff310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "20.4.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e0ab844cc0ff310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-subnet-2c-20.4.22.0/24",
              "kubernetes.io/cluster/eks-cluster-Region02-an2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-subnet-2c-20.4.22.0/24",
              "kubernetes.io/cluster/eks-cluster-Region02-an2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-0454539791cd4cb2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0454539791cd4cb2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-subnet-2a-20.4.1.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-subnet-2a-20.4.1.0/24"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:subnet/subnet-03d8a38881247e08a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "20.4.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d8a38881247e08a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-subnet-2c-20.4.11.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-public-fw-subnet-2c-20.4.11.0/24"
            },
            "vpc_id": "vpc-07fe8f59c530405ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:vpc/vpc-07fe8f59c530405ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.4.0.0/16",
            "default_network_acl_id": "acl-017f6be4be96f140f",
            "default_route_table_id": "rtb-013c322120f61d4a3",
            "default_security_group_id": "sg-00d31c9edf6f0111e",
            "dhcp_options_id": "dopt-0798c0136ccd8c55d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07fe8f59c530405ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013c322120f61d4a3",
            "owner_id": "518897854809",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Region02-vpc",
              "team": "4jo"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Region02-vpc",
              "team": "4jo"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "admin_access_ingress_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:security-group-rule/sgr-0e8609d7abc1db507",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "ICMP Test",
            "from_port": -1,
            "id": "sgr-0e8609d7abc1db507",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b02e0c32a1711212",
            "security_group_rule_id": "sgr-0e8609d7abc1db507",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_access_ingress_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:518897854809:security-group-rule/sgr-02f73a4e967a42f1d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "ICMP Test",
            "from_port": -1,
            "id": "sgr-02f73a4e967a42f1d",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c4a1ef6b4b6642e4",
            "security_group_rule_id": "sgr-02f73a4e967a42f1d",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}